# restaurantApp

./: .env  README.md  RestaurantApp.postman_collection.json  main.py  password_key.py  populate.py  pyproject.toml  token_key.py
configuration/: aws_keys.py
service/crud/: create.py  get_by_id.py  get_private.py  get_public.py  model.py  repository.py  update.py
service/login/: handler.py  model.py  repository.py
service/registration/: handler.py  model.py  repository.py
utils/: aws_parse.py  encryption.py  validation.py
