[tool.poetry]
name = "restaurantapp"
version = "0.1.0"
description = ""
authors = ["Santiago Melo Medina <smelomedina05@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.21.36"
pydantic = "^1.9.0"
cryptography = "^36.0.2"
Flask = "^2.1.1"
PyJWT = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
